# Quantum-Forge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  circuit_draw.py  compare_quantum_simulators.py  plots_comparison.py  qaoa_maxcut.py  requirements.txt
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  rust.yml
benches/: quantum_bench.rs
compare_with_other_simulators/: cirq_simulator.py  compare_quantum_simulators.py  pennylane_simulator.py  qiskit_simulator.py  tket_simulator.py
crates/qf-backend/: Cargo.toml
crates/qf-compiler/: Cargo.toml  README.md
crates/qf-compiler/benches/: quantum_bench.rs
crates/qf-compiler/examples/: bell_state.rs  qft.rs
crates/qf-compiler/src/: algorithm_runner.rs  circuit_executor.rs  complex.rs  constants.rs  lib.rs  main.rs
crates/qf-compiler/src/algorithms/: algorithm.rs
crates/qf-compiler/src/simulator/: cpu.rs  mod.rs
crates/qf-compiler/tests/: integration_tests.rs
crates/qf-frontend/: Cargo.toml  README.md  tauri.conf.json
crates/qf-frontend/capabilities/: default.json
crates/qf-frontend/src/: main.rs
crates/qf-ir/: Cargo.toml
crates/qf-parser/: Cargo.toml
crates/qf-parser/QASM_files/: grover_4.qasm  rand.qasm
crates/qf-parser/src/: lib.rs
crates/qf-parser/tests/: lexer_and_parser_tests.rs
examples/QASM_files/: 10_qubit.qasm  15_qubit.qasm  20_qubit.qasm  30_qubit.qasm  bv_4.qasm  bv_8.qasm  dense_circuit_test_circuit.qasm  grover_4.qasm  highly_entangled_test_circuit.qasm  rand.qasm  simple_circuit.qasm  very_dense_circuit.qasm  walk.qasm
src/: algorithm_runner.rs  circuit_executor.rs  complex.rs  lib.rs  main.rs
src/algorithms/: algorithm.rs  mod.rs
src/simulator/: cpu.rs  gates.rs  gpu.rs  kernels.rs  kernels_ptx.rs  mod.rs
tests/: integration_tests.rs
