cargo-features = ["profile-rustflags"]
[package]
name = "quantum_forge"
version = "0.1.0"
edition = "2021"

[lib]
name = "quantum_forge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "quantum_compiler"
path = "src/main.rs"

[features]
default = ["simd"]
simd = []
no_simd = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-complex = "0.4"
ndarray = "0.15"
approx = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "^1.5"
rustc-hash = "2.0.0"
smallvec = "1.13.2"
memory-stats = "1.0.0"
bitvec_simd = "0.20.5"
once_cell = "1.20.2"
num_cpus = "1.16.0"
bcrypt = "0.15.1"
mimalloc = "0.1.43"
colored = "2.1.0"
dhat = "0.3.3"
aligned-vec = "0.6.1"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
scc = "2.3.0"
cuda_std = "0.2"
cuda_std_macros = "0.2"
cust = "0.3"

[build-dependencies]
cuda_builder = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=+avx2"]
debug = false

[profile.cuda]
inherits = "release"
rustflags = ["-C", "target-cpu=native"]

[package.metadata.cuda]
cc = "nvcc"
cuda-version = "12.0"
ptx-versions = ["75"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "quantum_bench"
harness = false
