[workspace]
resolver = "2"
members = [
    "crates/qf-compiler",
    "crates/qf-parser",
    "crates/qf-ir",
    "crates/qf-backend"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
approx = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "^1.5"
rustc-hash = "2.0.0"
smallvec = "1.13.2"
memory-stats = "1.0.0"
bitvec_simd = "0.20.5"
once_cell = "1.20.2"
num_cpus = "1.16.0"
bcrypt = "0.15.1"
mimalloc = "0.1.43"
colored = "2.1.0"
dhat = "0.3.3"
aligned-vec = "0.6.1"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
scc = "2.3.0"
oq3_parser = "0.7.0"
oq3_syntax = "0.7.0"
oq3_semantics = "0.7.0"
thiserror = "2.0.12"
