[package]
name = "qf-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
oq3_parser.workspace = true
oq3_syntax.workspace = true
oq3_semantics.workspace = true
serde.workspace = true
rayon.workspace = true
smallvec.workspace = true
thiserror.workspace = true
glob = "0.3.2"

[lib]
name = "qf_parser"
path = "src/lib.rs"

[[test]]
name = "lexer_and_parser_tests"
path = "tests/lexer_and_parser_tests.rs"
